half run through jupyterlab

--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -200,7 +200,7 @@
       "text/plain": [
        "*** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
        " Ansys Mechanical Enterprise Academic Student      \n",
-       " 01055371  VERSION=LINUX x64     16:39:37  JAN 23, 2024 CP=      0.551\n",
+       " 01055371  VERSION=LINUX x64     16:44:14  JAN 23, 2024 CP=      0.483\n",
        "\n",
        "                                                                               \n",
        "\n",
@@ -316,12 +316,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f41144cdc4164cd09a55d6ac5c5b9ba1",
+       "model_id": "8fddcd49be6f473096cf491c9d56e6f9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f188ebd1ab0_0&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d9ea41000_0\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -367,12 +367,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd59b1cfefdd4318b54b2b4300106893",
+       "model_id": "9c502d27a588402eade0e78dc24440b3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f187069aa40_1&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d884e2530_1\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -435,12 +435,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f21952e3f474d08b06e296eb6fc0452",
+       "model_id": "d8886b112c10429fbf5e20c8ea031165",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f1870242830_2&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d884fd990_2\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -590,12 +590,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13de1a6ac521419c82125fdbe030a5e1",
+       "model_id": "096465780068425ab413c8440572c9cc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184ed7c610_3&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d5451e620_3\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -684,12 +684,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ffe4a0b52a74d7a93d1b0b3feb29c99",
+       "model_id": "65246c0269a64f0299cdf20c46833168",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184a3380a0_4&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d4f3be320_4\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -761,12 +761,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44f97e621f3a41228ce33bd4d56154db",
+       "model_id": "3e99bfd0ee0a4c1483c2687691b35198",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f187069a260_5&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d4f348e80_5\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -882,12 +882,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80d4e4dbc87e4ca9a072111f064ff8fb",
+       "model_id": "8d708ec42ae64910834866cf7dbcdcec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184a33a710_6&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d450e50f0_6\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -1096,12 +1096,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "395e158b533941fc92c48e43bb585e50",
+       "model_id": "bec535966eca4371b20f6b96e28a9c6e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184a401930_7&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d450e4a00_7\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -1153,7 +1153,7 @@
     {
      "data": {
       "text/plain": [
-       "***** ROUTINE COMPLETED *****  CP =         4.545\n",
+       "***** ROUTINE COMPLETED *****  CP =         1.886\n",
        "\n",
        "\n",
        "\n",
@@ -1404,12 +1404,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f9e97eeca8e40c699aeda258ae93476",
+       "model_id": "d7fce76420f243d6bd01278d8390f8d9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184a33a650_8&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d4518dc30_8\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -1478,12 +1478,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceba2d21204c433196c5e4dd81da0b70",
+       "model_id": "35ec368ab1d048ebbe365f84cf0af9f5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f1834b206d0_9&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d3beb9120_9\" src=\"https://sturdy-garbanzo-gxw…"
       ]
      },
      "metadata": {},
@@ -1532,121 +1532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*****  MAPDL SOLVE    COMMAND  *****\n",
-      "\n",
-      " *** NOTE ***                            CP =       4.670   TIME= 16:39:57\n",
-      " There is no title defined for this analysis.                            \n",
-      "\n",
-      " *** SELECTION OF ELEMENT TECHNOLOGIES FOR APPLICABLE ELEMENTS ***\n",
-      "                ---GIVE SUGGESTIONS ONLY---\n",
-      "\n",
-      " ELEMENT TYPE         1 IS PLANE183 WITH PLANE STRESS OPTION. NO SUGGESTION IS\n",
-      " AVAILABLE.\n",
-      "\n",
-      "\n",
-      "\n",
-      " *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
-      " Ansys Mechanical Enterprise Academic Student      \n",
-      " 01055371  VERSION=LINUX x64     16:39:57  JAN 23, 2024 CP=      4.672\n",
-      "\n",
-      "                                                                               \n",
-      "\n",
-      "\n",
-      "\n",
-      "                       S O L U T I O N   O P T I O N S\n",
-      "\n",
-      "   PROBLEM DIMENSIONALITY. . . . . . . . . . . . .2-D                  \n",
-      "   DEGREES OF FREEDOM. . . . . . UX   UY  \n",
-      "   ANALYSIS TYPE . . . . . . . . . . . . . . . . .STATIC (STEADY-STATE)\n",
-      "   GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  \n",
-      "\n",
-      " *** NOTE ***                            CP =       4.673   TIME= 16:39:57\n",
-      " Present time 0 is less than or equal to the previous time.  Time will   \n",
-      " default to 1.                                                           \n",
-      "\n",
-      " *** NOTE ***                            CP =       4.673   TIME= 16:39:57\n",
-      " The imaginary pressure value defined on element 2, face 2 (and possibly \n",
-      " others) will be not be used for this analysis type, but may be in a     \n",
-      " later analysis.                                                         \n",
-      "\n",
-      " *** NOTE ***                            CP =       4.673   TIME= 16:39:57\n",
-      " The conditions for direct assembly have been met.  No .emat or .erot    \n",
-      " files will be produced.                                                 \n",
-      "\n",
-      "                      L O A D   S T E P   O P T I O N S\n",
-      "\n",
-      "   LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1\n",
-      "   TIME AT END OF THE LOAD STEP. . . . . . . . . .  1.0000    \n",
-      "   NUMBER OF SUBSTEPS. . . . . . . . . . . . . . .     1\n",
-      "   STEP CHANGE BOUNDARY CONDITIONS . . . . . . . .    NO\n",
-      "   PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT\n",
-      "   DATABASE OUTPUT CONTROLS. . . . . . . . . . . .ALL DATA WRITTEN\n",
-      "                                                  FOR THE LAST SUBSTEP\n",
-      "\n",
-      "\n",
-      " SOLUTION MONITORING INFO IS WRITTEN TO FILE= file.mntr                                                                                                                                                                                                                                                           \n",
-      "\n",
-      "\n",
-      " Range of element maximum matrix coefficients in global coordinates\n",
-      " Maximum = 96184869 at element 15.                                       \n",
-      " Minimum = 31609902.3 at element 36.                                     \n",
-      "\n",
-      "   *** ELEMENT MATRIX FORMULATION TIMES\n",
-      "     TYPE    NUMBER   ENAME      TOTAL CP  AVE CP\n",
-      "\n",
-      "        1        90  PLANE183      0.007   0.000080\n",
-      " Time at end of element matrix formulation CP = 4.69354105.              \n",
-      "\n",
-      " SPARSE MATRIX DIRECT SOLVER.\n",
-      "  Number of equations =         646,    Maximum wavefront =     54\n",
-      "  Memory allocated for solver              =     0.700 MB\n",
-      "  Memory required for in-core solution     =     0.676 MB\n",
-      "  Memory required for out-of-core solution =     0.518 MB\n",
-      "\n",
-      " *** NOTE ***                            CP =       4.703   TIME= 16:39:57\n",
-      " The Sparse Matrix Solver is currently running in the in-core memory     \n",
-      " mode.  This memory mode uses the most amount of memory in order to      \n",
-      " avoid using the hard drive as much as possible, which most often        \n",
-      " results in the fastest solution time.  This mode is recommended if      \n",
-      " enough physical memory is present to accommodate all of the solver      \n",
-      " data.                                                                   \n",
-      " Sparse solver maximum pivot= 81097755.8 at node 145 UX.                 \n",
-      " Sparse solver minimum pivot= 230207.516 at node 174 UY.                 \n",
-      " Sparse solver minimum pivot in absolute value= 230207.516 at node 174   \n",
-      " UY.                                                                     \n",
-      "\n",
-      "   *** ELEMENT RESULT CALCULATION TIMES\n",
-      "     TYPE    NUMBER   ENAME      TOTAL CP  AVE CP\n",
-      "\n",
-      "        1        90  PLANE183      0.006   0.000062\n",
-      "\n",
-      "   *** NODAL LOAD CALCULATION TIMES\n",
-      "     TYPE    NUMBER   ENAME      TOTAL CP  AVE CP\n",
-      "\n",
-      "        1        90  PLANE183      0.002   0.000027\n",
-      " *** LOAD STEP     1   SUBSTEP     1  COMPLETED.    CUM ITER =      1\n",
-      " *** TIME =   1.00000         TIME INC =   1.00000      NEW TRIANG MATRIX\n",
-      "\n",
-      "\n",
-      " *** MAPDL BINARY FILE STATISTICS\n",
-      "  BUFFER SIZE USED= 16384\n",
-      "        0.188 MB WRITTEN ON ASSEMBLED MATRIX FILE: file.full\n",
-      "        0.375 MB WRITTEN ON RESULTS FILE: file.rst\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Solve the model\n",
     "output = mapdl.solve()\n",
@@ -1686,47 +1576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FINISH SOLUTION PROCESSING\n",
-       "\n",
-       "\n",
-       " ***** ROUTINE COMPLETED *****  CP =         4.727\n",
-       "\n",
-       "\n",
-       "\n",
-       " *** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
-       " Ansys Mechanical Enterprise Academic Student      \n",
-       " 01055371  VERSION=LINUX x64     16:39:58  JAN 23, 2024 CP=      4.729\n",
-       "\n",
-       "                                                                               \n",
-       "\n",
-       "\n",
-       "\n",
-       "          ***** MAPDL RESULTS INTERPRETATION (POST1) *****\n",
-       "\n",
-       " *** NOTE ***                            CP =       4.729   TIME= 16:39:58\n",
-       " Reading results into the database (SET command) will update the current \n",
-       " displacement and force boundary conditions in the database with the     \n",
-       " values from the results file for that load set.  Note that any          \n",
-       " subsequent solutions will use these values unless action is taken to    \n",
-       " either SAVE the current values or not overwrite them (/EXIT,NOSAVE)."
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mapdl.post1()"
    ]
@@ -1743,29 +1600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faa5fdb39752401cb906567596da5f1d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f182c8b88e0_10&reconnect=auto\" class=\"pyv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Plot displacement\n",
     "result = mapdl.result\n",
@@ -1793,29 +1635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7385169040334c448fb7b46131e662cd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:34955/index.html?ui=P_0x7f184a401ed0_11&reconnect=auto\" class=\"pyv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.plot_principal_nodal_stress(\n",
     "    0,\n",
@@ -1837,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1869,34 +1696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     NODE       FY\n",
-      "0   103.0  21.7590\n",
-      "1   104.0   9.8719\n",
-      "2   105.0  12.5870\n",
-      "3   107.0   1.5168\n",
-      "4   108.0  12.2310\n",
-      "5   109.0  29.4880\n",
-      "6   111.0 -29.8790\n",
-      "7   112.0 -10.5920\n",
-      "8   113.0  -2.5094\n",
-      "9   114.0 -12.4730\n",
-      "10  115.0  -9.8004\n",
-      "11  116.0 -22.2000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reactForces = mapdl.prrsol(lab=\"FY\").to_dataframe(columns=[\"NODE\", \"FY\"])\n",
     "print(reactForces)"
@@ -1924,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
