--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -82,7 +82,10 @@
    "source": [
     "# Plotting settings\n",
     "import pyvista as pv\n",
-    "pv.start_xvfb()  # To set xvfb display buffer"
+    "pv.set_jupyter_backend('static')\n",
+    "pv.global_theme.notebook = True\n",
+    "\n",
+    "pv.start_xvfb()  # To set xvfb display buffer\n"
    ]
   },
   {
@@ -91,7 +94,31 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LicenseServerConnectionError",
+     "evalue": "Exceeded 10 seconds while waiting for /home/mapdl/.ansys/licdebug.350a627c0532.FEAT_ANSYS.241.out to exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMapdlDidNotStart\u001b[0m                          Traceback (most recent call last)",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/launcher.py:630\u001b[0m, in \u001b[0;36mlaunch_grpc\u001b[0;34m(exec_file, jobname, nproc, ram, run_location, port, ip, additional_switches, override, timeout, verbose, add_env_vars, replace_env_vars, **kwargs)\u001b[0m\n\u001b[1;32m    629\u001b[0m         LOG\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChecking if gRPC server is alive.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 630\u001b[0m         \u001b[43m_check_server_is_alive\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstdout_queue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrun_location\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m MapdlDidNotStart \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/launcher.py:697\u001b[0m, in \u001b[0;36m_check_server_is_alive\u001b[0;34m(stdout_queue, run_location, timeout)\u001b[0m\n\u001b[1;32m    696\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 697\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MapdlDidNotStart(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMAPDL failed to start the gRPC server\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mMapdlDidNotStart\u001b[0m: MAPDL failed to start the gRPC server",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/launcher.py:1727\u001b[0m, in \u001b[0;36mlaunch_mapdl\u001b[0;34m(exec_file, run_location, jobname, nproc, ram, mode, override, loglevel, additional_switches, start_timeout, port, cleanup_on_exit, start_instance, ip, clear_on_connect, log_apdl, remove_temp_files, remove_temp_dir_on_exit, verbose_mapdl, license_server_check, license_type, print_com, add_env_vars, replace_env_vars, version, **kwargs)\u001b[0m\n\u001b[1;32m   1726\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrpc\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m-> 1727\u001b[0m     port, actual_run_location, process \u001b[38;5;241m=\u001b[39m \u001b[43mlaunch_grpc\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1728\u001b[0m \u001b[43m        \u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mport\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1729\u001b[0m \u001b[43m        \u001b[49m\u001b[43mip\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mip\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1730\u001b[0m \u001b[43m        \u001b[49m\u001b[43madd_env_vars\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43madd_env_vars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1731\u001b[0m \u001b[43m        \u001b[49m\u001b[43mreplace_env_vars\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreplace_env_vars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1732\u001b[0m \u001b[43m        \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mverbose_mapdl\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1733\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mstart_parm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1734\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1736\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m just_launch:\n",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/launcher.py:633\u001b[0m, in \u001b[0;36mlaunch_grpc\u001b[0;34m(exec_file, jobname, nproc, ram, run_location, port, ip, additional_switches, override, timeout, verbose, add_env_vars, replace_env_vars, **kwargs)\u001b[0m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m MapdlDidNotStart \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m--> 633\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(e) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mRun location: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrun_location\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mCommand line used: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mcmd\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    635\u001b[0m     terminal_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(_get_std_output(std_queue\u001b[38;5;241m=\u001b[39mstdout_queue))\u001b[38;5;241m.\u001b[39mstrip()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cmd' is not defined",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mLicenseServerConnectionError\u001b[0m              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Importing PyMAPDL\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mansys\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmapdl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m launch_mapdl\n\u001b[0;32m----> 4\u001b[0m mapdl \u001b[38;5;241m=\u001b[39m \u001b[43mlaunch_mapdl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/launcher.py:1765\u001b[0m, in \u001b[0;36mlaunch_mapdl\u001b[0;34m(exec_file, run_location, jobname, nproc, ram, mode, override, loglevel, additional_switches, start_timeout, port, cleanup_on_exit, start_instance, ip, clear_on_connect, log_apdl, remove_temp_files, remove_temp_dir_on_exit, verbose_mapdl, license_server_check, license_type, print_com, add_env_vars, replace_env_vars, version, **kwargs)\u001b[0m\n\u001b[1;32m   1763\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m license_server_check:\n\u001b[1;32m   1764\u001b[0m         LOG\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChecking license server.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 1765\u001b[0m         \u001b[43mlic_check\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1767\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception\n\u001b[1;32m   1769\u001b[0m \u001b[38;5;66;03m# Stopping license checker\u001b[39;00m\n",
+      "File \u001b[0;32m~/pymapdl/src/ansys/mapdl/core/licensing.py:191\u001b[0m, in \u001b[0;36mLicenseChecker.check\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    189\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    190\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_license_file_success \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[0;32m--> 191\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m LicenseServerConnectionError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_license_file_msg))\n\u001b[1;32m    193\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_license_checkout_success:\n\u001b[1;32m    194\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mLicenseServerConnectionError\u001b[0m: Exceeded 10 seconds while waiting for /home/mapdl/.ansys/licdebug.350a627c0532.FEAT_ANSYS.241.out to exist."
+     ]
+    }
+   ],
    "source": [
     "# Importing PyMAPDL\n",
     "from ansys.mapdl.core import launch_mapdl\n",
@@ -140,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -164,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -187,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -200,7 +227,7 @@
       "text/plain": [
        "*** MAPDL - ENGINEERING ANALYSIS SYSTEM  RELEASE                  24.1     ***\n",
        " Ansys Mechanical Enterprise Academic Student      \n",
-       " 01055371  VERSION=LINUX x64     16:44:14  JAN 23, 2024 CP=      0.483\n",
+       " 01055371  VERSION=LINUX x64     17:24:36  JAN 29, 2024 CP=      0.473\n",
        "\n",
        "                                                                               \n",
        "\n",
@@ -230,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -264,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -305,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -316,12 +343,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fddcd49be6f473096cf491c9d56e6f9",
+       "model_id": "effe738b26ea4f37be77401391413f50",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d9ea41000_0\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:42325/index.html?ui=P_0x7f7428285630_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -367,12 +394,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c502d27a588402eade0e78dc24440b3",
+       "model_id": "3e3772734c984632b40116c52d3f3630",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d884e2530_1\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f8138396350_1&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -435,12 +462,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8886b112c10429fbf5e20c8ea031165",
+       "model_id": "435515b9bb2647b1bc2d7b8a02f0776a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d884fd990_2\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f8138395180_2&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -579,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -590,12 +617,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "096465780068425ab413c8440572c9cc",
+       "model_id": "8541c9aedefb4db6b74090cebe1ca7a6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d5451e620_3\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f81125642b0_3&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -684,12 +711,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65246c0269a64f0299cdf20c46833168",
+       "model_id": "f522a0682d0943cf868c9d4f1fbc254f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d4f3be320_4\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f8112567d30_4&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -761,12 +788,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e99bfd0ee0a4c1483c2687691b35198",
+       "model_id": "4911b565c33c4014b9982e30a53d7580",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d4f348e80_5\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f810d8ee1a0_5&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -882,12 +909,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d708ec42ae64910834866cf7dbcdcec",
+       "model_id": "23411b4e70a74876b92e06198dbac0ed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe id=\"pyvista-jupyter_trame__template_P_0x7f2d450e50f0_6\" src=\"https://sturdy-garbanzo-gxw…"
+       "Widget(value='<iframe src=\"http://localhost:36701/index.html?ui=P_0x7f812e7f1ab0_6&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -1034,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1085,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1142,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1180,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1227,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1262,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1283,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1328,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1360,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1393,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1433,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1467,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1731,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
