--- a/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
+++ b/.devcontainer/codespaces-notebook/example-bracket_static.ipynb
@@ -82,10 +82,11 @@
    "source": [
     "# Plotting settings\n",
     "import pyvista as pv\n",
-    "pv.set_jupyter_backend('static')\n",
-    "pv.global_theme.notebook = True\n",
     "\n",
-    "pv.start_xvfb()  # To set xvfb display buffer\n"
+    "pv.start_xvfb()  # To set xvfb display buffer\n",
+    "\n",
+    "pv.set_jupyter_backend('static')\n",
+    "pv.global_theme.notebook = True"
    ]
   },
   {
