docs: adding new section to cheat sheet

--- a/doc/source/cheat_sheet/cheat_sheet.qmd
+++ b/doc/source/cheat_sheet/cheat_sheet.qmd
@@ -40,3 +40,9 @@ jupyter:
 from ansys.mapdl.core import __version__
 print(f"PyMAPDL version: {__version__}")
 ```
+
+## Launch PyMAPDL
+```{python}
+from ansys.mapdl.core import mapdl_launch
+mapdl = mapdl_launch()
+```
